--- a/po/es.po
+++ b/po/es.po
@@ -1,14 +1,14 @@
-# translation of gst-plugins-good-0.10.23.2.po to Español
+# translation of gst-plugins-good-0.10.25.3.po to Español
 # spanish translation for gst-plugins-good
 # This file is put in the public domain.
 # Jorge González González <aloriel@gmail.com>, 2007, 2008, 2009, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.23.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.25.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-12 00:08+0100\n"
-"PO-Revision-Date: 2010-08-17 19:50+0200\n"
+"POT-Creation-Date: 2010-11-01 17:27+0000\n"
+"PO-Revision-Date: 2010-11-01 18:05+0100\n"
 "Last-Translator: Jorge González González <aloriel@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "Language: es\n"
@@ -38,30 +38,28 @@ msgstr "Falló al decodificar la imagen JPEG"
 msgid "Could not connect to server"
 msgstr "No se pudo conectar con el servidor"
 
-#, fuzzy
 msgid "Server does not support seeking."
-msgstr "El dispositivo «%s» no soporta captura de vídeo"
+msgstr "El servidor no soporta la búsqueda."
 
-#, fuzzy
 msgid "Could not resolve server name."
-msgstr "No se pudo conectar con el servidor"
+msgstr "No se pudo resolver el nombre del servidor."
 
-#, fuzzy
 msgid "Could not establish connection to server."
-msgstr "No se pudo establecer la conexión con el servidor de sonido"
+msgstr "No se pudo establecer la conexión con el servidor."
 
 msgid "Secure connection setup failed."
-msgstr ""
+msgstr "Falló la configuración de la conexión segura."
 
 msgid ""
 "A network error occured, or the server closed the connection unexpectedly."
 msgstr ""
+"Ocurrió un error de red o el servidor cerró la conexión de forma inesperada."
 
 msgid "Server sent bad data."
-msgstr ""
+msgstr "El servidor envió datos erróneos."
 
 msgid "No URL set."
-msgstr ""
+msgstr "No existe un URL establecido."
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "El audio no existe o no es válido, el flujo AVI estará corrupto."
