--- a/po/it.po
+++ b/po/it.po
@@ -5,10 +5,10 @@
 # Luca Ferretti <elle.uca@infinito.it>, 2004, 2005, 2006, 2007, 2008, 2009, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.22.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.25.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-12 00:08+0100\n"
-"PO-Revision-Date: 2010-05-21 09:52+0200\n"
+"POT-Creation-Date: 2010-11-01 17:27+0000\n"
+"PO-Revision-Date: 2010-10-25 10:11+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -37,31 +37,32 @@ msgid "Could not connect to server"
 msgstr "Impossibile connettersi al server"
 
 msgid "Server does not support seeking."
-msgstr ""
+msgstr "Il server non supporta il posizionamento."
 
-#, fuzzy
 msgid "Could not resolve server name."
-msgstr "Impossibile connettersi al server"
+msgstr "Impossibile risolvere il nome del server."
 
-#, fuzzy
 msgid "Could not establish connection to server."
-msgstr "Impossibile stabilire la connessione al server audio"
+msgstr "Impossibile stabilire la connessione al server."
 
 msgid "Secure connection setup failed."
-msgstr ""
+msgstr "Impostazione della connessione sicura non riuscita."
 
 msgid ""
 "A network error occured, or the server closed the connection unexpectedly."
 msgstr ""
+"Si è verificato un errore di rete, oppure il server ha chiuso la connessione "
+"in modo inatteso."
 
 msgid "Server sent bad data."
-msgstr ""
+msgstr "In server ha inviato dati errati."
 
 msgid "No URL set."
-msgstr ""
+msgstr "Nessun URL impostato."
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
-msgstr "Ingresso audio assente o non valido. Lo stream AVI risulterà alterato."
+msgstr ""
+"Ingresso audio assente o non valido. Lo stream AVI risulterà danneggiato."
 
 msgid "This file contains no playable streams."
 msgstr "Questo file non contiene alcuno stream riproducibile."
