--- a/po/nl.po
+++ b/po/nl.po
@@ -1,14 +1,14 @@
-# translation of gst-plugins-good-0.10.23.2.nl.po to Dutch
+# translation of gst-plugins-good-0.10.25.3.nl.po to Dutch
 # This file is put in the public domain.
 #
 # Freek de Kruijf <f.de.kruijf@hetnet.nl>, 2007, 2008, 2009.
 # Freek de Kruijf <f.de.kruijf@gmail.com>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.23.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.25.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-12 00:08+0100\n"
-"PO-Revision-Date: 2010-08-29 21:49+0200\n"
+"POT-Creation-Date: 2010-11-01 17:27+0000\n"
+"PO-Revision-Date: 2010-10-25 20:15+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@gmail.com>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "Language: nl\n"
@@ -39,28 +39,28 @@ msgid "Could not connect to server"
 msgstr "Kan geen verbinding maken met server"
 
 msgid "Server does not support seeking."
-msgstr ""
+msgstr "Zoeken wordt door de server niet ondersteund."
 
-#, fuzzy
 msgid "Could not resolve server name."
-msgstr "Kan geen verbinding maken met server"
+msgstr "Kan de servernaam niet opzoeken."
 
-#, fuzzy
 msgid "Could not establish connection to server."
-msgstr "Kan geen verbinding maken met de geluidsserver"
+msgstr "Kan geen verbinding maken met de server"
 
 msgid "Secure connection setup failed."
-msgstr ""
+msgstr "Beveiligde verbinding opzetten is mislukt."
 
 msgid ""
 "A network error occured, or the server closed the connection unexpectedly."
 msgstr ""
+"Er trad een netwerkfout op of de server heeft de verbinding onverwacht "
+"afgesloten."
 
 msgid "Server sent bad data."
-msgstr ""
+msgstr "De server stuurde onjuiste gegevens."
 
 msgid "No URL set."
-msgstr ""
+msgstr "Geen URL ingesteld."
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Geen of ongeldig invoergeluid, AVI-stroom zal slecht zijn."
