--- a/po/sv.po
+++ b/po/sv.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.23.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.25.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-12 00:08+0100\n"
-"PO-Revision-Date: 2010-08-09 11:25+0100\n"
+"POT-Creation-Date: 2010-11-01 17:27+0000\n"
+"PO-Revision-Date: 2010-10-26 08:50+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -37,30 +37,27 @@ msgstr "Misslyckades med att avkoda JPEG-bild"
 msgid "Could not connect to server"
 msgstr "Kunde inte ansluta till servern"
 
-#, fuzzy
 msgid "Server does not support seeking."
-msgstr "Enheten \"%s\" saknar stöd för videofångst"
+msgstr "Servern saknar stöd för sökning/spolning."
 
-#, fuzzy
 msgid "Could not resolve server name."
-msgstr "Kunde inte ansluta till servern"
+msgstr "Kunde inte slå upp servernamnet."
 
-#, fuzzy
 msgid "Could not establish connection to server."
-msgstr "Kunde inte etablera en anslutning till ljudservern"
+msgstr "Kunde inte etablera anslutning till servern."
 
 msgid "Secure connection setup failed."
-msgstr ""
+msgstr "Säker anslutning misslyckades."
 
 msgid ""
 "A network error occured, or the server closed the connection unexpectedly."
-msgstr ""
+msgstr "Ett nätverksfel inträfade eller servern stängde anslutningen oväntat."
 
 msgid "Server sent bad data."
-msgstr ""
+msgstr "Servern skickade felaktigt data."
 
 msgid "No URL set."
-msgstr ""
+msgstr "Ingen URL inställd."
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Inget eller ogiltigt inljud. AVI-flödet kommer att skadas."
